--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="./styles/style.css">
-        <title>My WIT Project</title>
-    </head>
-    <body>
-    
-        <!-- Content here -->
 
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="./styles/style.css">
+
+    <title>My WIT Project</title>
+</head>
+
+<body>
+
+    <!-- Content here -->
+
+    <button id="btn-alert">Alert</button>
+
+</body>
+
 </html>
