Adding css support

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
     <link rel="stylesheet" href="./styles/style.css">
 
-    <title>My WIT Project</title>
+    <title>webpack test</title>
 </head>
 
 <body>
 
     <!-- Content here -->
 
-    <button id="btn-alert">Alert</button>
+    <button id="btn-alert">Show alert</button>
 
 </body>
 
