Adding support for Jquery and Uuid. Tested OK

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <!-- Content here -->
 
-    <button id="btn-alert">Show alert</button>
+    <button id="btn-alert" class="btn">Show alert</button>
+    <button id="btn-jquery" class="btn">Click with jquery</button>
 
 </body>
 
